# rcs2

./: README.md
RCS_Server/: build_and_run.sh  dockerfile  rcs_server_arm64  requirements.txt
RCS_Server/rcs_server/: db.sqlite3  manage.py  redis_bringup.sh  redis_teardown  reset_dispatch_db  server_bringup
RCS_Server/rcs_server/SLAMGUI/: apps.py  urls.py  views.py
RCS_Server/rcs_server/dispatch/: DispatchTools.py  consumers.py  models.py  routing.py  urls.py  views.py  waypointDistributor.py  waypointsDistributor.py.BK
RCS_Server/rcs_server/dispatch/migrations/: 0001_initial.py  0002_remove_robot_current_th_robot_current_z.py  0003_rename_current_z_robot_current_th.py
RCS_Server/rcs_server/landing/: urls.py  views.py
RCS_Server/rcs_server/rcs_server/: asgi.py  settings.py  urls.py  wsgi.py
RCS_Server/rcs_server/static/commands/: go1.txt
RCS_Server/rcs_server/static/css/: style.css
RCS_Server/rcs_server/static/images/: aksk_R3.pgm  home_map.pgm
RCS_Server/rcs_server/static/js/: cviz.js  keycodes.js  robot_connection.js
RCS_Server/rcs_server/static/mapyamls/: akskR3.yaml  (+4 more)
catmux/: only_the_robots.yaml  only_the_server.yaml  ros2_one_robot_simulation.yaml  ros2_session.yaml  ros2_tb3_sh,yaml  ros2_two_robots_simulation.yaml  tb3_ros2_gazebo.yaml
rcs_client/: package.xml  setup.cfg  setup.py
rcs_client/launch/: box_bot_1_rcs_client.launch.py  box_bot_2_rcs_client.launch.py  go1_rcs_client.launch.py  rcs_client_node.launch.py  tb3.launch.py
rcs_client/rcs_client/: move_base_proxy.py  rcs_client_node.py  socket_sample.py  turtlebot3_rcs_proxy.py
(+7 files in other folders)
