<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcs_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="woshima@pocketradar.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <exec_depend>techshare_ros_pkg2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
